Sugati/src/objects/Supplier_Cost__c.object
<CustomObject>
    <description>Supplier Cost</description>
    <fields>
        <fullName>OpportunityId__c</fullName>
        <formula>SC_Supplier_Booking__r.SB_Opportunity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OpportunityId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBC_Lock__c</fullName>
        <formula>SC_Supplier_Booking__r.SB_Opportunity__r.O_Lock__c</formula>
        <label>Lock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SC_Adjustment__c</fullName>
        <formula>IF(OR(DATEVALUE(CreatedDate)&gt; SC_Supplier_Booking__r.SB_Opportunity__r.O_Return_Date__c, 
DATEVALUE( LastModifiedDate )&gt; SC_Supplier_Booking__r.SB_Opportunity__r.O_Return_Date__c 
), &quot;Adjustment&quot;, &quot;NA&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Adjustment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SC_Client_Group__c</fullName>
        <label>Client Group</label>
        <referenceTo>Client_Group__c</referenceTo>
        <relationshipLabel>Supplier Costs</relationshipLabel>
        <relationshipName>Supplier_Costs</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SC_Commission_Out__c</fullName>
        <formula>IF(SC_Supplier_Booking__r.RecordType.Name = &quot;Commission Out&quot;, True, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Commission Out?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SC_Cost__c</fullName>
        <label>Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SC_Deposit_Required__c</fullName>
        <formula>IF(SC_Client_Group__r.CG_Opportunity__r.O_Days_to_Departure__c &gt; $Setup.Financial_Charges__c.Days_Before_I__c ,  SC_Total_Net_CostSC__c* $Setup.Financial_Charges__c.Required_Deposit_I__c ,
 IF(SC_Client_Group__r.CG_Opportunity__r.O_Days_to_Departure__c &gt; $Setup.Financial_Charges__c.Days_Before_II__c &amp;&amp; SC_Client_Group__r.CG_Opportunity__r.O_Days_to_Departure__c &lt; $Setup.Financial_Charges__c.Days_Before_I__c,  SC_Total_Net_CostSC__c* $Setup.Financial_Charges__c.Deposit_Required_II__c,SC_Total_Net_CostSC__c* $Setup.Financial_Charges__c.Deposit_Required_III__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deposit Required</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SC_Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SC_Exchange_Rate_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Exchange Rate Lookup</label>
        <referenceTo>Exchange_Rate__c</referenceTo>
        <relationshipLabel>Supplier Costs</relationshipLabel>
        <relationshipName>Supplier_Costs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SC_Is_Flight_Cost__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Flight Cost</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SC_Margin_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Margin Lookup</label>
        <referenceTo>Margin__c</referenceTo>
        <relationshipLabel>Supplier Costs</relationshipLabel>
        <relationshipName>Supplier_Costs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SC_Margin_Type__c</fullName>
        <label>Margin Type</label>
        <picklist>
            <picklistValues>
                <fullName>Percentage</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Value</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SC_Margin_Value__c</fullName>
        <label>Margin Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SC_Margin__c</fullName>
        <label>Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SC_MarkUp_Cost_for_Selling_Price__c</fullName>
        <label>Mark-Up Cost for Selling Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SC_Nights__c</fullName>
        <label>Nights</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SC_Occupancy_No__c</fullName>
        <label>Occupancy No</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SC_Occupancy_Type__c</fullName>
        <label>Occupancy Type</label>
        <picklist>
            <picklistValues>
                <fullName>Adult</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Child</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infant</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SC_Option__c</fullName>
        <label>Option</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SC_Outstanding_Payment_Amount__c</fullName>
        <formula>SC_Supplier_Cost_Payment__r.SCP_Outstanding_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outstanding Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SC_Selected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Selected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SC_Shared_Cost_Per_Night__c</fullName>
        <label>Shared Cost Per Night</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SC_Supplier_Booking__c</fullName>
        <label>Supplier Booking</label>
        <referenceTo>Supplier_Booking__c</referenceTo>
        <relationshipLabel>Supplier Costs</relationshipLabel>
        <relationshipName>Supplier_Costs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SC_Supplier_Cost_Payment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supplier Cost Payment</label>
        <referenceTo>Supplier_Cost_Payment__c</referenceTo>
        <relationshipLabel>Supplier Costs</relationshipLabel>
        <relationshipName>Supplier_Costs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SC_Supplier_Currency__c</fullName>
        <label>Supplier Currency</label>
        <picklist>
            <picklistValues>
                <fullName>AED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BRL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DKK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FJD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GBP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HKD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HUF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JOD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MAD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MYR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NAD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NOK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NZD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OMR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PLN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QAR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RUB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SGD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>THB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZAR</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SC_Total_Client_Group_Cost__c</fullName>
        <label>Total Client Group Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SC_Total_Net_CostSC__c</fullName>
        <label>Total Net Cost Selling Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SC_Total_Net_Cost_PP__c</fullName>
        <label>Total Net Cost PP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SC_Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Shared</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Per Person</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Supplier Cost</label>
    <nameField>
        <displayFormat>SBC-{0000000000}</displayFormat>
        <label>Supplier Cost ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Supplier Costs</pluralLabel>
    <recordTypes>
        <fullName>Mark_Up_Adjust</fullName>
        <active>true</active>
        <label>Mark Up Adjust</label>
    </recordTypes>
    <recordTypes>
        <fullName>Selling_Price_Adjust</fullName>
        <active>true</active>
        <description>Adjusting Selling Price</description>
        <label>Selling Price Adjust</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Supplier_Cost_Locked</fullName>
        <active>true</active>
        <errorConditionFormula>PRIORVALUE( SBC_Lock__c ) == SBC_Lock__c &amp;&amp; SBC_Lock__c</errorConditionFormula>
        <errorMessage>Opportunity has been locked please contact to system admin.</errorMessage>
    </validationRules>
</CustomObject>